--- a/gb/ncid277_3.md
+++ b/gb/ncid277_3.md
@@ -1,4 +1,12 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/fxikhp286/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/fxikhp286/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/fxikhp286/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/fxikhp286/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/fxikhp286/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/fxikhp286/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/fxikhp286/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/fxikhp286/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/fxikhp286/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/fxikhp286/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/fxikhp286/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/fxikhp286/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/fxikhp286/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/fxikhp286/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/fxikhp286/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/fxikhp286/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/fxikhp286/www/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/fxikhp286/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="https://git.io/fjHxp" rel="nofollow">大纪元</a> | <a href="https://git.io/fjHxh" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="https://git.io/fjHpJ" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="https://git.io/fjHpk" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="https://git.io/fjHpL" rel="nofollow">看中国</a> | <a href="https://git.io/fjHpt" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="https://git.io/fjHpm" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="https://git.io/fjHpO" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>大陆政治</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/fxikhp286/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/fxikhp286/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/10/n11713973.md#1" target="_blank">中共限古令再升级 各平台每月限播一部古装剧</a><br></h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/10/n11713973.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/03/1810092140002662-150x120.jpg" align ="left"></a>近日，大陆多家影视上市公司高管及业内知名编剧团队人士证实，早前中共广电总局多次朝令夕改的“限古令”现在不仅没有解禁，而且再度升级。具体体现为，自12月起，各个播放平台每月只可播出一部古装剧。鉴于此，许多影视公司已经完全放弃古装剧。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 7:40 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/10/n11714478.md#1" target="_blank">美学界与智库报告：中共大撒币外交难买人心</a><br></h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/10/n11714478.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/07/Capture-8-150x120.jpg" align ="left"></a>美国学界与智库10日公布一份有关中共外交的最新研究报告显示，近几年来，北京外交预算倍增，达人民币600亿元；不过，北京“大撒币式”的外交，似乎没有赢得更多正面形象与友谊。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 7:36 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/10/n11714293.md#1" target="_blank">中共空军0:4败于泰军 空军大校演讲泄真相</a><br></h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/10/n11714293.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/6d4862f1955d324ee753fe211f5d1b64-150x120.jpg" align ="left"></a>号称全球军事实力第三的中共国家，其真实军事实力到底如何呢？中共空军大校在一次内部报告中揭露了真相。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 7:09 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/10/n11714373.md#1" target="_blank">【热点互动】美反对世行对中贷款 释重大信号</a><br></h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/10/n11714373.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/15df1ccfc6055bd6_ttl7dayKOH_842bd21c8be02656-150x120.jpg" align ="left"></a>川普总统发推批评世界银行通过今后五年对中国的低息贷款，并称中国（中共）很有钱；如果没有，“他们就造钱”。美财政部长也表示已经对该计划提出反对。外媒评论中美经济竞争正蔓延到多边机构。为何世行对中贷款引发争议？此事会引发什么样的国际效应？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 5:32 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/10/n11714338.md#1" target="_blank">抹黑黄之锋持美国绿卡 漏洞百出沦笑柄</a><br></h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/10/n11714338.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/7bdd9c08246b807c40a06136283dfcf4-150x120.jpg" align ="left"></a>10日，香港众志秘书长黄之锋在脸书贴出一张疑似中共五毛伪造的黄之锋美国“绿卡”，不但名字写错，拼音也用普通话的拼法，沦为笑柄。他还调侃“五毛和小粉红们要注意喔”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 5:19 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/10/n11713799.md#1" target="_blank">【新闻看点】从反送中到驱逐共党 港人猛醒</a><br></h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/10/n11713799.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1909200714411501-600x399-1-800x450-150x120.jpg" align ="left"></a>12月9日，香港人的街头抗争刚好满6个月。从6月初夏走到12月寒冬，香港人的抗争发生了质的变化，从“反送中”演变成了驱逐共党的“反极权”民主抗争。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 4:02 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/10/n11714155.md#1" target="_blank">美推迟15日新关税？库德洛：仍可能加征</a><br></h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/10/n11714155.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/820b1d8b0e06c5ed67af13daddf85dd5-150x120.jpg" align ="left"></a>美媒12月10日称，美中双方官员表示，贸易谈判代表正在为推迟将于12月15日生效的美对华新一轮关税铺路。白宫首席经济顾问库德洛（Larry Kudlow）当天反驳说，美方仍未排除15日加税的可能性。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 3:53 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/9/n11711294.md#1" target="_blank">中港警察头目会面 官媒报导不同调的背后</a><br></h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/9/n11711294.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/191111100311100615-150x120.jpg" align ="left"></a>中共公安部部长赵克志日前会见了香港警队新任警务处长时，公安部旗下的官网予以详细报导，但中共两大央媒删除了赵克志的很多敏感讲话。有分析认为，央媒删除的那些话有泄漏中共高层秘密之嫌。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 3:16 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/10/n11714086.md#1" target="_blank">剑指中俄 美两党国防预算达共识 建太空部队</a><br></h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/10/n11714086.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-1170990853-150x120.jpg" align ="left"></a>周一（12月9日）晚间，美国参众两院的相关委员会通过了《 2020财政年度国防授权法》（DNAA 2020），批准了7380亿美元的国防预算，让美国准备应对来自中共和俄罗斯的威胁，此外美国太空部队将正式成为美国第六个军事部门。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 2:35 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/10/n11713761.md#1" target="_blank">美国安顾问：使用华为 即西方信息安全末日</a><br></h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/10/n11713761.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-1177748633-150x120.jpg" align ="left"></a>美国川普（特朗普）的国家安全顾问奥布赖恩（Robert O’Brien）警告说，如果西方世界让华为参与建立5G网络，那就是民主世界的信息安全“世界末日”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月10日 11:03 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/10/n11712279.md#1" target="_blank">【翻墙必看】中共残杀“变节”间谍及家人</a><br></h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/10/n11712279.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2004/08/408171957939-150x120.jpg" align ="left"></a>大纪元每天为读者梳理翻墙必看的文章......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月10日 9:28 PM							</td></tr>
@@ -27,15 +35,6 @@
 中共歼10（J-10）战机又被称为猛龙，是中共单引擎喷气式战斗机机队的主要战机，与西方和俄罗斯第四代战斗机相当。但J-10与无所不在的美国F-16猎鹰战斗机（F-16 Fighting Falcon）十分相似，且和以色列狮式战斗机有很大关系。
 
 2.中企债务规模大.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月09日 9:30 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/4/n11701362.md#1" target="_blank">走出华为的工程师：华为是全人类的噩梦(上)</a><br></h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/4/n11701362.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/GettyImages-1153137465-150x120.jpg" align ="left"></a>华为员工李洪元事件，揭开了华为利用公权力构陷员工入狱的黑幕，引发外界关注。一名华为离职工程师向大纪元表示，华为就是中共的一个权力部门，它是结合商业、间谍、情报、偷窃的军工复合体。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月09日 4:03 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/9/n11710103.md#1" target="_blank">中共下令3年内移除外国电脑 分析师：很困难</a><br></h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/9/n11710103.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-153788978-150x120.jpg" align ="left"></a>中共当局下令所有政府部门与公立机构在三年内移除外国电脑设备和软件，不过有分析师认为，很难以中国的软件替换外国的软件。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月09日 2:36 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/11/18/n11662309.md#1" target="_blank">揭秘：中共如何利用华为在中亚建智能城市</a><br></h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/11/18/n11662309.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/12/1812080415402378-150x120.jpg" align ="left"></a>随着中共通过经济投资在全球进行扩张，中共也输出了对民众打压、监控的独裁统治手段，其在中亚的投资同样助长了当地政府对民众的监控和管制，当地民众开始反抗。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月09日 9:00 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/8/n11708923.md#1" target="_blank">歌手黄耀明12.8游行表心声：行出香港路</a><br></h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/8/n11708923.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/yaominhuang_meitu_1-150x120.jpg" align ="left"></a>港人在经过了6个月艰苦卓绝的抗争后，12月8日，民阵发起“国际人权日游行”，逾80万人再次走上街头，打着“追究警暴、捍卫人权”的横幅表达诉求。与岑子杰、李柱铭、毛梦静等民主派人士一起打头阵的歌手黄耀明，下午2时许提前从维园出发时在facebook（fb）呼吁︰“大家快快沿途加入，行出香港路！”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月09日 8:49 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/8/n11709100.md#1" target="_blank">因撑港新专辑遭中共封杀 董事长乐团霸气回应</a><br></h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/8/n11709100.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1903281058132483-150x120.jpg" align ="left"></a>成军逾20年的台湾“董事长乐团”近期疑因力挺香港的“反送中”运动，上月底推出的第13张专辑《风中浮沉的花蕊》传遭大陆数位音乐平台下架。对此，贝斯手钧董（林大钧）在facebook（fb）霸气地写道：“帅喔，终于不用被听免费的了！”主唱吉董（吴永吉）更加霸气地回应：“（封杀）我们无所谓啦。愿荣光归香港！”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月09日 8:28 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/8/n11709179.md#1" target="_blank">海归博士遭羁押3年 114次庭审后被撤诉</a><br></h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/8/n11709179.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/007ESdUkly1g9h55xiwdyj313v0m6e81-150x120.jpg" align ="left"></a>海归清华博士、国内LED照明第一人孙夕庆，回国创业，陷入经济纠纷被告上法庭，历经114次庭审，在羁押1277天后，无罪释放，然而他自己创立的公司已经被掏空。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月09日 6:31 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/10/n11712789.md#1" target="_blank">中共非法关押律师等 美驻华大使发声明抨击</a><br></h3>12月10日是“国际人权日”。中共虽然签署了《世界人权宣言》，但从来未遵守相关承诺，中国人权状况每况愈下。美国驻华大使布兰斯塔德发声明抨击中共。而中共在广州举办的“世界律师大会”，更是严禁大陆维权律师到场。中国失踪律师的家属表示，对中共开这个大会感到“震惊和可笑”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月10日 5:15 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/9/n11710666.md#1" target="_blank">“焚书”重演？ 甘肃图书馆烧书并发照片</a><br></h3>日前，一则甘肃庆阳市镇原县图书馆在10月分对馆藏“非法出版物”、宗教出版物集中焚毁并配发照片的报道引起争议。
-知名作家章诒和质疑，焚书事关中国文化命脉，“谁批准的？谁签的字？”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月09日 6:52 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/9/n11710095.md#1" target="_blank">广东省国资委前党委副书记张小刚落马</a><br></h3>12月9日，中共广东省国资委前党委副书记、省国资委巡视员张小刚，涉嫌严重“违纪违法”被调查。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月09日 3:43 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/ncid277_2.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/fxikhp286/djy/blob/master/gb/ncid277.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/fxikhp286/djy/blob/master/gb/ncid277_2.md#1">2</a>&nbsp;&nbsp;3&nbsp;&nbsp;<a href="https://github.com/fxikhp286/djy/blob/master/gb/ncid277_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/fxikhp286/djy/blob/master/gb/ncid277_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/fxikhp286/djy/blob/master/gb/ncid277_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/fxikhp286/djy/blob/master/gb/ncid277_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/fxikhp286/djy/blob/master/gb/ncid277_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/fxikhp286/djy/blob/master/gb/ncid277_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/fxikhp286/djy/blob/master/gb/ncid277_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/fxikhp286/djy/blob/master/gb/ncid277_4.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/fxikhp286/djy/blob/master/gb/ncid277_3.md#1<br><a href="https://github.com/fxikhp286/djy/blob/master/gb/ncid277_3.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/fxikhp286/djy/blob/master/gb/ncid277_3.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/ncid277_3.htm">http://www.epochtimes.com/gb/ncid277_3.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
